Se comitean cambios, se agregaron planes, y ahora se pueden crear y asociar cantidad de cajas a usuarios, y arreglos esteticos varios